@@ -47,24 +47,34 @@ public class UpdateShopController {
 	@PostMapping("shop/updateShop")
 	public String updateShopForm(@RequestParam("shop_img") MultipartFile file, 
 									HttpServletRequest request, Model model) {
-		if (request.getParameter("shop_tel2").trim().isEmpty() || request.getParameter("shop_tel3").trim().isEmpty() ) {
-			model.addAttribute("msg", "빈값은 입력하실 수 없습니다.");
-			return "alert/back";
+		
+		// 사용자가 번호를 아무것도 바꾸지 않았다면 원래 번호를 그대로 사용해준다
+		String shopTel = request.getParameter("shopTel");
+		String shopHours = request.getParameter("shopHours");
+		if (request.getParameter("shopTel") == null) {
+			if (request.getParameter("shop_tel2").trim().isBlank() || request.getParameter("shop_tel3").trim().isBlank()) {
+				model.addAttribute("msg", "빈값은 입력하실 수 없습니다.");
+				return "alert/back";				
+			}
+		  // 만약 사용자가 번호를 수정한다면 수정한 번호를 재설정 해준다.
+		  shopTel = request.getParameter("shop_tel1") + "-" + request.getParameter("shop_tel2") + "-" + request.getParameter("shop_tel3");
+		}
+		
+		if(request.getParameter("shopHours") == null) {
+			shopHours = request.getParameter("shop_hour1") + " ~ " + request.getParameter("shop_hour2");
 		}
 		Shop shop = new Shop();
 		
 		shop.setBusinessNumber(request.getParameter("businessNumber"));
 		shop.setShopName(request.getParameter("shopName"));
-		String shopTel = request.getParameter("shop_tel1") + "-" + request.getParameter("shop_tel2") + "-" + request.getParameter("shop_tel3");
 		shop.setShopTel(shopTel);
-		System.out.println(shop.getShopTel());
 		shop.setShopPostCode(request.getParameter("shop_address1"));
 		shop.setShopAddress(request.getParameter("shop_address2"));
 		shop.setShopDetailAddress(request.getParameter("shop_address3"));
 		shop.setShopExtraAddress(request.getParameter("shop_address4"));
-		shop.setShopHours(request.getParameter("shopHours"));
-		shop.setShopTables(request.getParameter("shopTables"));
-		shop.setShopMaxPeoples(request.getParameter("shopMaxPeoples"));
+		shop.setShopHours(shopHours);
+		shop.setShopTables(request.getParameter("shop_tables"));
+		shop.setShopMaxPeoples(request.getParameter("shop_max_people"));
 		shop.setShopImg(request.getParameter("shop_img"));
 		
 		// 사용자가 빈값 입력시 예외 처리
@@ -73,10 +83,7 @@ public class UpdateShopController {
 		   shop.getShopPostCode().trim().isEmpty() ||
 		   shop.getShopAddress().trim().isEmpty() ||
 		   shop.getShopDetailAddress().trim().isEmpty() ||
-		   shop.getShopExtraAddress().trim().isEmpty() ||
-		   shop.getShopHours().trim().isEmpty() ||
-		   shop.getShopTables().trim().isEmpty() ||
-		   shop.getShopMaxPeoples().isEmpty()) {
+		   shop.getShopExtraAddress().trim().isEmpty()) {
 			model.addAttribute("msg", "빈값은 입력하실 수 없습니다.");
 			return "alert/back";
 		}
@@ -103,7 +110,7 @@ public class UpdateShopController {
 		
 		// resources에 shop_image 폴더 절대 경로 입력 String uploadFolder = "";  
 		
-		String uploadFolder = "C:\\Hbackend\\Where-are-you-going-today\\wgt\\src\\main\\webapp\\resources\\shop\\shop_Img";
+		String uploadFolder = "C:\\wgt\\Where-are-you-going-today\\wgt\\src\\main\\webapp\\resources\\shop\\shop_Img";
 		
 		/*
 		  파일 업로드시 파일명이 동일한 파일이 이미 존재할 수도 있고 사용자가 
